# agentfence

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  invariants.md  progress.md  threat-model.md
docs/adr/: 0001-retain-dac-override.md
examples/: demo.sh
src/agentfence/: __init__.py  cli.py  constants.py  exceptions.py
src/agentfence/adapters/: claude_code.py  command.py
src/agentfence/analysis/: compare.py
src/agentfence/artifacts/: store.py
src/agentfence/core/: lifecycle.py  orchestrator.py  run_context.py
src/agentfence/models/: enums.py  events.py  manifest.py
src/agentfence/policy/: engine.py  rules.py
src/agentfence/replay/: service.py
src/agentfence/reporting/: generator.py
src/agentfence/sandbox/: command_builder.py  docker.py  resource_monitor.py
src/agentfence/workspace/: fingerprint.py  git_client.py  manager.py
src/repoairlock/: __init__.py  cli.py  constants.py  exceptions.py
src/repoairlock/adapters/: claude_code.py  command.py
src/repoairlock/analysis/: compare.py  trajectory_metrics.py
src/repoairlock/artifacts/: store.py
tests/e2e/: test_run_pipeline.py
tests/fixtures/: agent_success.py
tests/integration/: test_docker.py  test_workspace.py
tests/unit/: test_adapter.py  test_artifact_store.py  test_claude_code_adapter.py  test_cli.py  test_command_builder.py  test_fingerprint.py  test_git_client.py  test_metrics.py  test_models.py  test_orchestrator.py  test_policy.py  test_replay.py  test_resource_monitor.py  test_run_context.py
(+18 files in other folders)
